base/companion-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: companion
  labels:
    app: companion
spec:
  type: ClusterIP
  selector:
    app: companion
  ports:
  - port: 80
    targetPort: 3020
    protocol: TCP
    name: http
